@startuml
class DonorController {
    + DonorController(context:DBContext)
    + Exists(id:string) : bool
    + <<async>> Create(donor:Donor) : Task<ActionResult<string>>
    + <<async>> Get(id:string) : Task<ActionResult<string>>
    + <<async>> Update(id:string, donor:Donor) : Task<ActionResult<string>>
    + <<async>> UpdateAndFetchAll(id:string, template:Donor) : Task<ActionResult<string>>
    + <<async>> Delete(id:string) : Task<ActionResult<string>>
    + <<async>> All() : Task<ActionResult<string>>
    + Settings() : string
}
class "IUserInterfaceCRUD`1"<T> {
}
class "GenericRepository`1"<T> {
}
ControllerBase <|-- DonorController
"IUserInterfaceCRUD`1" "<Donor>" <|-- DonorController
DonorController --> "DonorRepository<Donor>" "GenericRepository`1"
DonorController o-> "settings" JsonSerializerSettings
@enduml
